<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded" >

    <TextView
        android:id="@+id/tv_ActivityTitle"
        style="@style/TextLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/lblTransMgt" />

    <TextView
        android:id="@+id/tv_lblDesc"
        style="@style/TextLabel"
        android:layout_below="@+id/tv_ActivityTitle"
        android:text="@string/lblDesc" />

    <EditText
        android:id="@+id/et_Desc"
        style="@style/EditTextStd"
        android:layout_alignBaseline="@+id/tv_lblDesc"
        android:layout_below="@+id/tv_ActivityTitle"
        android:layout_toRightOf="@+id/tv_lblDesc"
        android:hint="@string/lblAddDesc" />
    
    <TextView
        android:id="@+id/tv_lblDate"
        style="@style/TextLabel"
        android:layout_alignTop="@+id/dp_transDate"
        android:layout_alignBottom="@+id/dp_transDate"
        android:gravity="center_vertical"
        android:layout_below="@+id/tv_lblDesc"
        android:text="@string/lblDate" />
    
    <DatePicker
        android:id="@+id/dp_transDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Desc"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/et_Desc"
        android:calendarViewShown="false" />
    
    <TextView
        android:id="@+id/tv_lblCat"
        style="@style/TextLabel"
        android:layout_below="@+id/tv_lblDate"
        android:text="@string/lblCat" />

    <Spinner
        android:id="@+id/spn_cat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_Desc"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dp_transDate" />
    
    <TextView
        android:id="@+id/tv_lblAmt"
        style="@style/TextLabel"
        android:layout_below="@+id/tv_lblCat"
        android:text="@string/lblAmt" />
    
    <EditText
        android:id="@+id/et_Amt"
        style="@style/EditTextStd"
        android:layout_alignBaseline="@+id/tv_lblAmt"
        android:layout_below="@+id/spn_cat"
        android:layout_toRightOf="@+id/tv_lblDesc"
        android:layout_alignLeft="@+id/et_Desc"
        android:gravity="right"
        android:inputType="numberDecimal" />
    
    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center" >
        
		<Button 
		    android:id="@+id/btn_cancel"
		    style="?android:attr/buttonStyleInset"
		    android:textColor="#FFF"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:text="@string/btnCancel" />
		
		<Button 
		    android:id="@+id/btn_submit"
		    style="?android:attr/buttonStyleInset"
		    android:textColor="#FFF"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="4"
		    android:text="@string/btnSubmit"
		    android:hint="@string/lblAmtHint" />
    </LinearLayout>

</RelativeLayout>